# 2DWorldGenerator

./: CMakeLists.txt  README.md  imgui.ini
include/: BatchRenderer.h  Camera.h  ErrorHandler.h  PerlinNoise.h  PixelBatchRenderer.h  Rectangle.h  SandBox.h  Shader.h  Texture.h  TileBatchRenderer.h
include/UI/: MapConfigurator.h
res/shaders/: pixel.fs  pixel.vs  rect.fs  rect.vs  tile.fs  tile.vs
src/: BatchRenderer.cpp  CMakeLists.txt  Camera.cpp  PerlinNoise.cpp  PixelBatchRenderer.cpp  Rectangle.cpp  SandBox.cpp  Shader.cpp  Texture.cpp  TileBatchRenderer.cpp  glad.c  main.cpp
vendors/: CMakeLists.txt
vendors/glad/: CMakeLists.txt
vendors/glad/glad/: glad.h
vendors/glfw/: CMakeLists.txt
vendors/glm/: CMakeLists.txt
vendors/imgui/: CMakeLists.txt
vendors/stb/: CMakeLists.txt
